--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <span id="woff-btn" class="btn">下载woff</span>
         <span id="back-btn" class="btn">返回</span>
         <div>已下载数据量：</div>
-        <div>shoplist: <span id="shoplistLength">0</span></div>
-        <div>foodlist: <span id="foodlistLength">0</span></div>
-        <div>searchlist: <span id="searchlistLength">0</span></div>
+        <div>shopList: <span id="shopListLength">0</span></div>
+        <div>foodList: <span id="foodListLength">0</span></div>
+        <div>searchList: <span id="searchListLength">0</span></div>
         <div>数据存储路径为: <span id="outPath"></span></div>
     </div>
     <webview class="chrome-content" src="https://h5.waimai.meituan.com/" id="chrome-content-01" preload="preload.js" style="width: 800px; height: 600px;">
@@ -71,12 +71,12 @@
 
     <div id="loading" class="loading">loading......</div>
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         window.nodeRequire = require;
         delete window.require;
         delete window.exports;
         delete window.module;
-    </script>
+    </script> -->
 
     <!-- <script src="lib/js/jquery.min.js"></script> -->
     
